<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">SN List</string>
    <string name="app_name">SN List</string>
    <string name="message_text">Message</string>
    <string name="activities_list">Activities List</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>

<!-- SN_1 -->
    <string name="lbl_long">Long</string>
    <string name="lbl_lat">Lat</string>
	<string name="lbl_info">Info</string>
    <string name="btn_show">Show</string>
    <string name="btn_save">Save</string>
    <string name="default_long">100</string>
    <string name="default_lat">50</string>
    <string name="default_info">Good place</string>
    <string name="message">Message here</string>
    <string name="space_chars">*****</string>
    
</resources>