<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbl_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_long" 
            style="@style/dflt_txt_attr" />"

        <TextView
            android:id="@+id/space1"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space_chars" />

        <TextView
            android:id="@+id/lbl_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_lat" 
            style="@style/dflt_txt_attr"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_long" 
            style="@style/dflt_txt_attr"/>

        <TextView
            android:id="@+id/space2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space_chars" />

        <TextView
            android:id="@+id/tv_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_lat" 
            style="@style/dflt_txt_attr"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbl_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_info" 
            style="@style/dflt_txt_attr"/>

        <EditText
            android:id="@+id/et_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/default_info" 
            style="@style/dflt_txt_attr">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_show" 
            style="@style/dflt_txt_attr"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save" 
            style="@style/dflt_txt_attr"/>

    </LinearLayout>

</LinearLayout>